<resources>
    <string name="app_name">VehiclesPro</string>
    <string name="vehiclespro">VehiclesPro</string>
    <string name="history">History</string>
    <string name="next">Next</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="what_is_your_name">What is your name</string>

    <string name="click_back_again">Please click BACK again to exit.</string>
    <string name="enter_vehicle_number">Enter Vehicle Number</string>
    <string name="enter_valid_vehicle_number">Enter Valid Vehicle Number</string>
    <string name="enter_make">Enter Make</string>
    <string name="enter_model">Enter Model</string>
    <string name="enter_variant">Enter Variant</string>
    <string name="enter_fuel_type">Please Select Fuel Type</string>
    <string name="eg_mh_12_ss_7585">eg. MH 12 SS 7585</string>
    <string name="no_data_available">No data available</string>
    <string name="date">Date : </string>
    <string name="name">Name :</string>
    <string name="vehicle_number">Vehicle Number :</string>
    <string name="make">Make :</string>
    <string name="model">Model :</string>
    <string name="variant">Variant :</string>
    <string name="fuel_type">Fuel Type :</string>
    <string name="photo">Photo :</string>
    <string name="select_image">Select Image</string>
    <string name="update">Update</string>
    <string name="profile">Profile</string>
    <string name="save">Save</string>

</resources>